--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ---> by maywzh
+test.c
+main
+test
+
+
 # ---> macOS
 # General
 .DS_Store
@@ -5,7 +11,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
