--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Go: Debug",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${file}",
+    },
+    {
       "name": "Python: Terminal (integrated)",
       "type": "python",
       "request": "launch",
@@ -12,7 +19,7 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "launch c",
+      "name": "C: Debug",
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/test",
