--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Node: Debug",
+      "program": "${file}"
+    },
+    {
       "name": "Go: Debug",
       "type": "go",
       "request": "launch",
