--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,14 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
+    {
+      "name": "Launch Package",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}"
+    },
     {
       "type": "node",
       "request": "launch",
@@ -11,11 +19,14 @@
       "program": "${file}"
     },
     {
-      "name": "Go: Debug",
+      "name": "Go Debug",
       "type": "go",
       "request": "launch",
-      "mode": "debug",
-      "program": "${file}",
+      "mode": "auto",
+      "program": "${workspaceRoot}/${file}",
+      "env": {},
+      "args": [],
+      "linux": {}
     },
     {
       "name": "Python: Terminal (integrated)",
