--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,5 @@
     "type_traits": "cpp",
     "utility": "cpp"
   },
-  "python.pythonPath": "/home/maywzh/.pyenv/versions/3.7.1/bin/python"
+  "python.pythonPath": "/Users/meiwangzhihui/.pyenv/versions/3.7.4/bin/python"
 }
